--- a/policy/BLZ-29739.md
+++ b/policy/BLZ-29739.md
@@ -95,7 +95,7 @@ The areas of the Blazed Nation are as follows (From North to South):
 6. [Area 6: Industrial](https://blazed.city/explore?area=6)
 7. [Area 7: Shopping (Uptown Swell)](https://blazed.city/explore?area=7)
 8. [Area 8: Industrial (Magnolia a.k.a. Downtown Swell)](https://blazed.city/explore?area=8)
-9. [Area 9: Residential (Ferringwood)](https://blazed.city/explore?area=8)
+9. [Area 9: Residential (Ferringwood)](https://blazed.city/explore?area=9)
 
 Each city shall be administered by an entity of the type zero (0), which is government.
 
@@ -203,6 +203,8 @@ The Nation of Blazed and the Office of Finance vests its banking authority in th
 
 ### 2.I Bonds
 An asset known as a "bond" may be created and offered for sale by an approved company. A bond is divided up into a series of shares, which all have a principle balance, an interest rate, a term (or maturity date), and a rating (A, AA, AAA). The principle balance determines the dividend paid to investors upon the maturity date (plus accrued interest). An interest rate, written in the bond by the issuing company, will determine the variable amount of Blazed Cash (B\$) relative to the principle balance, paid to the owner of the bond upon the maturity date. The term (or maturity date) will denote the period which the bond is to pay its principle balance (plus accrued interest) to the owner of the share (on the date of maturity, after the determined period has passed). Once issued, a company can sell its bonds on the bond market. A buyer of one or more share(s) may also opt to sell their share(s) before the maturity date. To begin issue, a company must have its bond proposal approved by a bank, and must be sponsored by one or more banks. Another bank or agency must rate the proposed bond (A, AA, AAA) based on the issuing company's likelihood to default upon repayment. In the event of default, the Woodrow Central Bank's Default insurance will assure the necessary investors will be compensated.
+
+The par value[^6] of a bond is usually $1,000 (or to a lesser degree $100), but will vary based on the market demand, the type of bond, and underlying assets/contracts.
 
 ### 2.J Credit Score
 The Credit Reporting Agency of Blazed (CRAB) will store history related to borrowed funds, fund repayment, financial responsibility, length of credit history, purchase/income habits, and net-worth for all Blazed agents. The data collected will be used to generate a credit report and credit score, which rate the overall creditworthiness of the respective agent. Banks, financial institutions, employers, landlords, and educators may use this score to determine if a citizen or company is eligible for a certain offer. Citizens and companies may also submit a request for forgiveness or redaction on any reported statement. Unsettled debts may also be settled by an agreement (negotiation) between the creditor and borrower.
@@ -381,7 +383,7 @@ Anyone can contribute to our projects! We don't just hire programmers, also proj
 
 <br />
 
-<footer align="center">
+<footer>
 
   [&#x21d1; Back to Top](#blazed-national-constitution) &nbsp;&nbsp;|&nbsp;&nbsp; [Customer Feedback](https://forms.gle/f9F4SRyfpKdAHJ1R6) &nbsp;&nbsp;|&nbsp;&nbsp; [Invest](https://opencollective.com/blazed-nation) &nbsp;&nbsp;|&nbsp;&nbsp; [@blazed-nation](https://github.com/blazed-nation/)
 
@@ -398,3 +400,4 @@ Anyone can contribute to our projects! We don't just hire programmers, also proj
 [^3]: A **promissory note**, sometimes referred to as a note payable, is a legal instrument (more particularly, a financing instrument and a debt instrument), in which one party (the maker or issuer) promises in writing to pay a determinate sum of money to the other (the payee), either at a fixed or determinable future time or on demand of the payee, under specific terms and conditions. [Source](https://en.wikipedia.org/wiki/Promissory_note#:~:text=A%20promissory%20note%2C%20sometimes%20referred,or%20determinable%20future%20time%20or)
 [^4]: Abandonment refers to the voluntary and intentional discarding of a known right. [Souurce](https://www.law.cornell.edu/wex/abandonment)
 [^5]: Personal property is property that is movable.
+[^6]: Par value, also known as nominal value, is the face value of a bond or the stock value stated in the corporate charter.
