--- a/policy/BLZ-44970.md
+++ b/policy/BLZ-44970.md
@@ -50,7 +50,7 @@ Real property must be identified before it can be bought and sold to the open ma
 
 The property description requires the size of the target claim, the location area, plus a unique identifier for this new plot.
 
-Once completed, a property description must be approved by the Department of Reality. If approved, a "place" record will be created with zero rooms, and the deed will be created and signed over to the claimant. A plot with zero rooms is undeveloped land, and thus it will not show up as visible to users. To accept guest traffic, the claimant will have to develop the land.
+Once completed, a property description must be approved by the Department of Reality. If approved, a "place" record will be created with zero rooms, and the deed[^6] will be created and signed over to the claimant. A plot with zero rooms is undeveloped land, and thus it will not show up as visible to users. To accept guest traffic, the claimant will have to develop the land.
 
 ### 0.D Plots
 A plot is one or more parcels of real property, which have been combined or zoned individually in the open market.
@@ -182,3 +182,4 @@ Anyone can contribute to our projects! We don't just hire programmers, also proj
 [^3]: Title is the aggregate of legal rights enjoyed by a person under law towards the ownership and possession of a property.
 [^4]: Real estate bonds are fixed-income investments or loans, backed by real property.
 [^5]: A real estate investment trust (REIT) is a company that owns, and in most cases operates, income-producing real estate. REITs own many types of commercial real estate, including office and apartment buildings, warehouses, hospitals, shopping centers, hotels and commercial forests. Some REITs engage in financing real estate.[Source](https://en.wikipedia.org/wiki/Real_estate_investment_trust).
+[^6]: A deed is any legal instrument in writing which passes, affirms or confirms an interest, right, or property and that is signed, attested, delivered, and in some jurisdictions, sealed.
