--- a/policy/BLZ-29739.md
+++ b/policy/BLZ-29739.md
@@ -110,13 +110,13 @@ Each city shall be administered by an entity of the type zero (0), which is gove
 Within the Blazed Nation, shall exist a council which consists of majority shareholders of the Ruff Management Inc. company. Wherein the shares held are represented by legally binding contracts signed by each shareholder (shareholder agreement). These council members shall differ from members of the National Forum by way of prestige and higher authority[^2]. The council shall oversee the two offices, the department and admin offices of the government which are:
 
 #### Admin Offices
-* Blazed National Forum
-* Blazed Central Court 
+* [Blazed National Forum](https://www.facebook.com/groups/blazedforum)
+* [Blazed Central Court](https://github.com/blazed-nation/blz-gov/court) 
   
 #### Department Offices
-* Office of Finance
-* Office of Reality
-* Office of Commerce
+* [Office of Commerce](https://github.com/blazed-nation/blz-gov/tree/main/offices/commerce)
+* [Office of Finance](https://github.com/blazed-nation/blz-gov/tree/main/offices/finance)
+* [Office of Reality](https://github.com/blazed-nation/blz-gov/tree/main/offices/reality)
 
 Each office shall be organized as an entity of type zero (0), which is government.
 
