--- a/policy/BLZ-29739.md
+++ b/policy/BLZ-29739.md
@@ -29,14 +29,20 @@ We the people of the great micronation of Blazed, location within the Virtual wo
 
 ### 0.B Land Claim
 The lands owned and controlled by the Nation of Blazed are to be all logical endpoints located on the following domains:
-* [blz.one](https://blz.one/) - Portal/Authentication Hub.
-* [blazed.world](https://blazed.world/) - Virtual World (Wiki, Tutorials, and more).
-* [blazed.city](https://blazed.city/) - Micronation managed / governed like a real municipality.
-* [blazed.place](https://blazed.place/) - Estate exploration / experience hub.
-* [blazed.bond](https://blazed.bond/) - Project bonds, corporate bonds, and banking bonds.
-* [blazed.cc](https://blazed.cc/) - Backend (API), front-end bank account application
+* [blz.one](https://blz.one/)
+* [blazedlabs.com](https://blazedlabs.com/)
+* [blazed.city](https://blazed.city/)
+* [blazed.company](https://blazed.company/)
+* [blazed.contact](https://blazed.contact/)
+* [blazed.dev](https://blazed.dev/)
+* [blazed.quest](https://blazed.quest/)
+* [blazed.sbs](https://blazed.sbs/)
+* [blazed.space](https://blazed.space/)
+* [blazed.systems](https://blazed.systems/)
+* [blazed.tel](https://blazed.tel/)
+* [blazed.xyz](https://blazed.xyz/)
 
-This document shall henceforth serve as a deed[^1] representing the full legal ownership of the aforementioned properties 
+This document shall henceforth serve as a deed[^1] representing the full legal ownership of the aforementioned properties. 
 
 All territory located within the Blazed Nation is subject to this constitution, as well as all ordinances published by the Blazed National Government.
 
@@ -358,28 +364,25 @@ Anyone can contribute to our projects! We don't just hire programmers, also proj
 
 <br />
 
-## Credits
+## Attribution
 
 <img align="right" src="https://blazed.sirv.com/blazed.city/city-art.jpg?w=300&h=300" />
 
-- Distributed By:&nbsp;&nbsp;............&nbsp;&nbsp;[Ruff Management Inc.](https://ruff-manage.com/)
-- Published By:&nbsp;&nbsp;...............&nbsp;&nbsp;[Blazed Publishing](https://blazed.xyz/)
-- Produced By:&nbsp;&nbsp;................&nbsp;&nbsp;[Blazed Labs LLC](https://blazed.company/)
-- Developed By:&nbsp;&nbsp;..............&nbsp;&nbsp;[Blazed Dev. Group](https://blazed.dev/)
-- Written By:&nbsp;&nbsp;...................&nbsp;&nbsp;[Tyler Ruff](https://tyler-ruff.com/)
-- Hiring Manager&nbsp;&nbsp;............&nbsp;&nbsp;[Tyler Ruff](https://www.linkedin.com/in/blz-one/)
-- Lead Engineer:&nbsp;&nbsp;.............&nbsp;&nbsp;[Tyler Ruff](https://github.com/tyler-ruff)
-- Product Manager&nbsp;&nbsp;.........&nbsp;&nbsp;[Tyler Ruff](https://www.facebook.com/blazed.space/)
-- Director of Finance&nbsp;&nbsp;......&nbsp;&nbsp;[Woodrow Bronzelton](https://www.facebook.com/woodrowbronze)
-- Project Director&nbsp;&nbsp;............&nbsp;&nbsp;[Plotinus Magnus](https://www.facebook.com/plotinusmagnus/)
-- Estate Manager&nbsp;&nbsp;............&nbsp;&nbsp;[Alexander Mazelow](https://www.facebook.com/alexmazelow/)
-- Lead Designer:&nbsp;&nbsp;.............&nbsp;&nbsp;[Matthew Ruff](https://www.linkedin.com/in/matthew-ruff-45872a216/)
-- Editor:&nbsp;&nbsp;...........................&nbsp;&nbsp;[Matthew Ruff](https://github.com/matt-ruff)
-- QA Specialist:&nbsp;&nbsp;...............&nbsp;&nbsp;Star Dom
+| Name                  | Website                                    | Contribution           |
+| --------------------- | ------------------------------------------ | ---------------------- |
+| Tyler Ruff            | [tyler-ruff.com](https://tyler-ruff.com/)  | Lead Software Architect|
+| Blazed Labs LLC       | [blazedlabs.com](https://blazedlabs.com/)  | Publisher, Developer   |
+| Ruff Management Inc.  | [ruff-manage.com](https://ruff-manage.com/)| Distributor, Producer  |
+| Beez Marketing        | [beez.top](https://beez.top/)              | Stakeholder            |
 
 <br />
 
 ---
+
+## Questions? Comments? Concerns?
+Voice them now, [Contact Blazed](https://blazed.company/contact).
+Fill out a [Contact Form](https://blazed.contact/) online.
+Or, you can email us: [hello@blazed.space](mailto:hello@blazed.space).
 
 <br />
 
