--- a/policy/BLZ-29739.md
+++ b/policy/BLZ-29739.md
@@ -352,7 +352,7 @@ Anyone can contribute to our projects! We don't just hire programmers, also proj
 
 ## Attribution
 
-<img align="right" src="https://blazed.sirv.com/blazed.city/city-art.jpg?w=300&h=300" />
+<a href="https://blazed.city" target="_blank"><img align="right" src="https://blazed.sirv.com/blazed.city/city-art.jpg?w=300&h=300" /></a>
 
 | Name                  | Website                                    | Contribution           |
 | --------------------- | ------------------------------------------ | ---------------------- |
