--- a/policy/BLZ-29739.md
+++ b/policy/BLZ-29739.md
@@ -1,6 +1,6 @@
 # Blazed National Constitution
 
-<img align="right" src="https://blazed.sirv.com/blazed-labs/blazed-banner-sm.png" />
+<a href="https://blazed.dev/"><img align="right" src="https://blazed.sirv.com/blazed-labs/blazed-banner-sm.png" /></a>
 
 ### Table of Contents:
 - [Preamble](#blazed-national-constitution)
@@ -352,7 +352,7 @@ Anyone can contribute to our projects! We don't just hire programmers, also proj
 
 ## Attribution
 
-<a href="https://blazed.city" target="_blank"><img align="right" src="https://blazed.sirv.com/blazed.city/city-art.jpg?w=300&h=300" /></a>
+<a href="https://blazed.city"><img align="right" src="https://blazed.sirv.com/blazed.city/city-art.jpg?w=300&h=300" /></a>
 
 | Name                  | Website                                    | Contribution           |
 | --------------------- | ------------------------------------------ | ---------------------- |
