--- a/policy/BLZ-29739.md
+++ b/policy/BLZ-29739.md
@@ -335,10 +335,7 @@ The service provider is required to deliver a single or series of predefined "re
 ## Contributing
 Anyone can contribute to our projects! We don't just hire programmers, also project managers, designers, UX/UI, testers, and many more roles are available. Super flexable scheduling, super lax work culture, you'll love it here!
 
-**How to become a Blazed Contributor in *three simple steps?***
-1. Join the [Blazed Development Group](https://www.facebook.com/groups/blzdev) on Facebook.
-2. Join the [Blazed One Portal](https://blz.one/) and maintain membership (its free, don't worry).
-3. View the full [Contributing Guide](https://github.com/blazed-labs/blazed-labs/blob/main/law/CONTRIBUTING.md) for more contribution tips and advice.
+Check out our [Contributing Guide](https://blazed.city/#contributing).
 
 *Just give it a try, and you will see...*
 
