--- a/policy/BLZ-44970.md
+++ b/policy/BLZ-44970.md
@@ -3,12 +3,9 @@
 <a href="https://blazed.dev/"><img align="right" src="https://blazed.sirv.com/blazed-labs/blazed-banner-sm.png" /></a>
 
 ### Table of Contents:
-- [Preamble](#blazed-estate-code)
+- [Preamble](#preamble)
 - [Law](#1-law)
 - [Finance](#2-finance)
-- [Establishment](#3-establishment)
-- [Assets](#4-assets)
-- [Contracts](#5-contracts)
 - [Attribution](#attribution)
 
 <br />
