--- a/policy/BLZ-44970.md
+++ b/policy/BLZ-44970.md
@@ -162,7 +162,7 @@ Or, you can email us: [hello@blazed.space](mailto:hello@blazed.space).
 
   &copy;2020-2023 &nbsp; [Blazed Labs LLC](https://blazedlabs.com/), [Ruff Management Inc](https://ruff-manage.com/).&nbsp;&nbsp;**All Rights Reserved.**
 
-  [![MIT License](https://img.shields.io/github/license/blazed-labs/blazed-labs?style=for-the-badge "MIT License")](https://blazedlabs.com/license.txt) &nbsp;&nbsp;&nbsp; [![Document Id Number](https://img.shields.io/badge/index-44970-red?style=for-the-badge "Controlled Copy")](https://blazed.city/documents?did=44970) &nbsp;&nbsp;&nbsp; [![Created by humans](https://img.shields.io/badge/Made%20By-humans-green?style=for-the-badge "Created by humans")](https://blazedlabs.com/humans.txt)
+  [![MIT License](https://img.shields.io/github/license/blazed-labs/blazed-labs?style=for-the-badge "MIT License")](https://blazedlabs.com/license.txt) &nbsp;&nbsp;&nbsp; [![Document Id Number](https://img.shields.io/badge/index-44970-red?style=for-the-badge "Controlled Copy")](https://github.com/blazed-nation/blz-gov/blob/main/policy/BLZ-44970.md) &nbsp;&nbsp;&nbsp; [![Created by humans](https://img.shields.io/badge/Made%20By-humans-green?style=for-the-badge "Created by humans")](https://blazedlabs.com/humans.txt)
 
 </footer>
 
